Compositing Render Slots don't Work #44396

Closed
opened 2015-04-15 10:30:37 +02:00 by Sebastian Koenig · 13 comments

System Information
OSX 10.10.2, GTX980

Blender Version
Broken: 000dfc0
Worked: 2.74

Short description of error
Render Slots don't work when using compositor. When you try to toggle between slot 1 and slot 2 with "J", the first render in slot 1 disappears. So you cannot compare renders. Also, it makes some russian dude go "tsk tsk tsk" ;)

Exact steps for others to reproduce the error
Open attached file, render, hit J, render again, hit J --> first slot empty.
buffer.blend

**System Information** OSX 10.10.2, GTX980 **Blender Version** Broken: 000dfc0 Worked: 2.74 **Short description of error** Render Slots don't work when using compositor. When you try to toggle between slot 1 and slot 2 with "J", the first render in slot 1 disappears. So you cannot compare renders. Also, it makes some russian dude go "tsk tsk tsk" ;) **Exact steps for others to reproduce the error** Open attached file, render, hit J, render again, hit J --> first slot empty. [buffer.blend](https://archive.blender.org/developer/F162193/buffer.blend)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Dalai Felinto was assigned by Sebastian Koenig 2015-04-15 10:30:38 +02:00
Author
Member

Added subscriber: @sebastian_k

Added subscriber: @sebastian_k
Member

Added subscriber: @Blendify

Added subscriber: @Blendify
Member

this is a know problem I believe its in our to do on the wiki cant find it at the moment. same problem with masks and the is a task open for that https://developer.blender.org/T44181

this is a know problem I believe its in our to do on the wiki cant find it at the moment. same problem with masks and the is a task open for that https://developer.blender.org/T44181
Dalai Felinto was unassigned by Aaron Carlisle 2015-04-15 18:57:07 +02:00
Aaron Carlisle self-assigned this 2015-04-15 18:57:07 +02:00
Member

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Aaron Carlisle changed title from Render Slots don't work to Compositing Render Slots don't Work 2015-04-15 18:58:11 +02:00
Aaron Carlisle removed their assignment 2015-04-15 18:58:11 +02:00
Dalai Felinto was assigned by Aaron Carlisle 2015-04-15 18:58:11 +02:00

Added subscriber: @mont29

Added subscriber: @mont29

Added subscriber: @Psy-Fi

Added subscriber: @Psy-Fi

This is a regression after multiview merge while the other issue has existed before.

@Blendify, please when making comments on bug reports, avoid using first plurar person ("our to do"). People might mistake you for a developer and take the comments as a fact. Again, the help is welcome, but when you give feedback on issues you can't comment as a programmer, use language that makes it easier for people to discern that this is not an expert opinion or things can get confusing in the process.

This is a regression after multiview merge while the other issue has existed before. @Blendify, please when making comments on bug reports, avoid using first plurar person ("our to do"). People might mistake you for a developer and take the comments as a fact. Again, the help is welcome, but when you give feedback on issues you can't comment as a programmer, use language that makes it easier for people to discern that this is not an expert opinion or things can get confusing in the process.

Investigated here a bit, issue is is image_get_render_result where RenderResult can return a NULL rectf when we display from a renderslot (instead of render result). We can use calls like RE_RenderViewGetRectf to get a correct rectf in addition to RenderResult.rectf. This solves toggling between images but has issues when doing edits in the compositor (edited result gets lost). Leaving to Dalai for proper investigation.

Investigated here a bit, issue is is image_get_render_result where RenderResult can return a NULL rectf when we display from a renderslot (instead of render result). We can use calls like RE_RenderViewGetRectf to get a correct rectf in addition to RenderResult.rectf. This solves toggling between images but has issues when doing edits in the compositor (edited result gets lost). Leaving to Dalai for proper investigation.

This issue was referenced by ecb3362a24

This issue was referenced by ecb3362a244f082d58c6b73a044d661e4b80f320

@Psy-Fi the bug you reported on irc with my proposed fix (aka if you edit a renderslot which is not the latest one the compo buffer is lost) is not the regression that multiview introduced. (in fact I believe is the bug @Blendify was referring to).

So I'll go ahead and commit my fix. More details in the commit log.

@Psy-Fi the bug you reported on irc with my proposed fix (aka if you edit a renderslot which is not the latest one the compo buffer is lost) is not the regression that multiview introduced. (in fact I believe is the bug @Blendify was referring to). So I'll go ahead and commit my fix. More details in the commit log.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit ecb3362a24.

Closed by commit ecb3362a24.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44396
No description provided.